Avoid layout shift and impropper HTML by removing P and BR tags fromskill component sections

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -78,7 +78,3 @@ h4 {
         }
     }
   }
-
-.skill ~ br {
-    display: none;
-}
